[package]
name = "semcommit"
version = "0.1.0"
edition = "2021"
authors = ["Vince van Noort <vincevannoort@gmail.com>"]
description = "A command line tool to generate semantic commit messages"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/semcommit/latest"
homepage = "https://docs.rs/crate/semcommit/latest"
repository = "https://github.com/vincevannoort/semcommit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
dialoguer = {version="0.10.2", features=["fuzzy-select"]}
serde = "1.0.148"
serde_derive = "1.0.148"
toml = "0.5.9"
