[package]
name = "semcommit"
version = "0.1.6"
edition = "2021"
authors = ["Vince van Noort <vincevannoort@gmail.com>"]
description = "A command line tool to generate semantic commit messages"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/semcommit/latest"
homepage = "https://docs.rs/crate/semcommit/latest"
repository = "https://github.com/vincevannoort/semcommit"

[package.metadata.release]
pre-release-commit-message = "chore(version): release {{crate_name}} version {{version}}"

[dependencies]
console = "0.15.2"
dialoguer = {version="0.10.2", features=["fuzzy-select"]}
regex = "1.7.1"
serde = "1.0.148"
serde_derive = "1.0.148"
strum = "0.24.1"
strum_macros = "0.24.3"
toml = "0.5.9"
